# GameofLfe

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameOfLife  README.md  cmake_install.cmake  life  main.c  makefile
game/: CMakeLists.txt  life.c  life.h
gui/: CMakeLists.txt  life_gui.c  life_gui.h
